refactor(pipeline): 优化代码结构并更新列表访问方式
- 移除未使用的 PipelineContext 导入
- 将 nodes.get(0) 替换为 nodes.getFirst() 以使用更现代的 API
- 提高代码可读性和维护性